<resources>
    <string name="app_name">MukMap</string>

    <string name="subscribe">구독</string>
    <string name="subscribing">구독중</string>
    <string name="please_enter_your_search_term">검색어를 입력하세요</string>
    <string name="visited_channels">다녀간 유투버들</string>
    <string name="review_video">이 가게의 리뷰 영상</string>
    <string name="login_text_title">Log in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="favorite_list">찜 목록</string>
    <string name="subscript_list">구독 목록</string>
    <string name="channel_info">채널 정보</string>
    <string name="mukbang_video">먹방 영상</string>
    <string name="kind_of_foods">방문한 가게의 음식종류</string>
    <string name="area_visited">방문 지역</string>
    <string name="review_count">방문 리뷰 %d개</string>
    <string name="subscribers_count">구독자 %d</string>
    <string name="subscribers_count_k">구독자 %dk</string>
    <string name="channel_image">channel_image</string>
    <string name="the_restaurant_that_someone_searching">지금 다른 사람들이 찾는 음식점</string>
    <string name="image_button">image_button</string>
    <string name="image">image</string>
    <string name="video_image">video_image</string>
    <string name="map">지도</string>
    <string name="channel">채널</string>
    <string name="setting">설정</string>
    <string name="all_notification">전체 알림</string>
    <string name="subscribe_notification">구독한 채널 업데이트 알림</string>
    <string name="question">개발자에게 문의</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
