<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/selector_button_favorite"
        android:title="@string/favorite_list" />
    <item
        android:id="@+id/main"
        android:enabled="true"
        android:icon="@drawable/selector_button_map"
        android:title="@string/map"/>
    <item
        android:id="@+id/video"
        android:enabled="true"
        android:icon="@drawable/selector_button_video"
        android:title="@string/channel"/>
    <item
        android:id="@+id/setting"
        android:enabled="true"
        android:icon="@drawable/selector_button_setting"
        android:title="@string/setting"/>

</menu>