<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:background="?attr/colorSurface"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_side"
    android:paddingEnd="@dimen/padding_side"
    android:weightSum="9">

    <TextView
        style="@style/Widget.MukMap.TextView.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_title"
        android:layout_weight="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_button_sns"
        android:backgroundTint="@color/red_google"
        android:gravity="center"
        android:text="@string/google"
        android:textAppearance="@style/TextAppearance.MukMap.Button.Bold"
        android:textColor="?attr/colorSurface"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_button_sns"
        android:backgroundTint="@color/blue_facebook"
        android:gravity="center"
        android:text="@string/facebook"
        android:textAppearance="@style/TextAppearance.MukMap.Button.Bold"
        android:textColor="?attr/colorSurface"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_button_sns"
        android:backgroundTint="@color/black_apple"
        android:gravity="center"
        android:text="@string/apple"
        android:textAppearance="@style/TextAppearance.MukMap.Button.Bold"
        android:textColor="?attr/colorSurface"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>