<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/shape_circle_white"
        android:layout_marginTop="@dimen/margin_bottom_sheet_top"
        android:layout_marginBottom="@dimen/margin_subtitle">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="1000dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/channel_image"
                android:src="@color/blue_900" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/Widget.MukMap.TextView.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="맛객리우TV"
        android:layout_marginBottom="@dimen/margin_body"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="방문리뷰 101개 / 구독자 10k"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceCaption"
        android:layout_marginBottom="@dimen/margin_subtitle"/>

    <Button
        android:id="@+id/btn_subscribe"
        style="@style/Widget.MukMap.Button.Subscribe"
        android:layout_width="75dp"
        android:layout_height="28dp"
        android:text="@string/subscribe"
        android:textAppearance="@style/TextAppearance.MukMap.Button.Subscribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_channel"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="@android:color/transparent"
        android:layout_marginBottom="@dimen/margin_subtitle"/>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_100"
        app:tabTextColor="?attr/colorOnSurface"
        app:tabTextAppearance="?attr/textAppearanceHeadline6"
        app:tabIndicator="@android:color/transparent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_info" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mukbang_video" />
    </com.google.android.material.tabs.TabLayout>

</LinearLayout>