<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_background_map">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_background_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            style="@style/Widget.MukMAp.ImageButton.Back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            style="@style/Widget.MukMap.TextView.Headline1"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/padding_side"
            android:text="존맛탱 한우 먹고 싶은 가게"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/iv_background"
            app:layout_constraintTop_toTopOf="@id/iv_background"
            app:layout_constraintVertical_bias="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="142dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_location_pick"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="@id/iv_background"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="@id/iv_background"
            app:layout_constraintTop_toTopOf="@id/iv_background" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_side"
        android:paddingEnd="@dimen/padding_side">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="@dimen/margin_subtitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="강남대로 109길 43"
            android:textAppearance="?attr/textAppearanceBody2"
            android:layout_marginBottom="@dimen/margin_subtitle"/>

        <TextView
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textStyle="bold"
            android:text="@string/visited_channels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_body"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/margin_subtitle"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_video"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
    </LinearLayout>
</LinearLayout>